force-app/main/default/objects/ConsensusDescriptions__c/ConsensusDescriptions__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Consensus Descriptions</label>
</CustomObject>