force-app/main/default/objects/ConsensusDescriptions__c/fields/Admin_Training_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Training_Fee__c</fullName>
    <label>Admin Training Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>