force-app/main/default/objects/ConsensusDescriptions__c/fields/Locations_and_Site_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Locations_and_Site_Licenses__c</fullName>
    <label>Locations and Site Licenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>