force-app/main/default/objects/ConsensusDescriptions__c/fields/Phone_Number_Fee__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Fee__c</fullName>
    <label>Phone Number Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>