force-app/main/default/objects/ConsensusDescriptions__c/fields/Professional_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service_Fee__c</fullName>
    <label>Professional Service Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>