force-app/main/default/objects/ConsensusDescriptions__c/fields/Tier1__c.field-meta.xml
<CustomField>
    <fullName>Tier1__c</fullName>
    <description>default to 99</description>
    <label>Tier1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>