force-app/main/default/objects/ConsensusDescriptions__c/fields/Tier2__c.field-meta.xml
<CustomField>
    <fullName>Tier2__c</fullName>
    <label>Tier2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>