force-app/main/default/objects/ConsensusDescriptions__c/fields/Tier3__c.field-meta.xml
<CustomField>
    <fullName>Tier3__c</fullName>
    <label>Tier3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>