force-app/main/default/objects/ConsensusDescriptions__c/fields/Tier_and_Price__c.field-meta.xml
<CustomField>
    <fullName>Tier_and_Price__c</fullName>
    <label>Tier and Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>