force-app/main/default/objects/ConsensusDescriptions__c/fields/User_Training_Fee__c.field-meta.xml
<CustomField>
    <fullName>User_Training_Fee__c</fullName>
    <label>User Training Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>